<resources>
    <string name="app_name">Assignment 2</string>
    <string name="hello_message">你好!</string>
    <string name="buttonText">我是一个按钮</string>
    <string name="buttonText2">开始聊天</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="login_hint">登录名</string>
    <string name="radiobutton">按钮</string>
    <string name="checkbox">勾选框</string>
    <string name="switch1">开关</string>
    <string name="buttonLogin">登录按钮</string>
    <string name="ok">是的</string>
    <string name="cancel">取消</string>
    <string name="dialog_message">结束对话吗?</string>
    <string name="dialog_title">结束会话</string>
    <string name="send">发送</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">第一分页</string>
    <string name="second_fragment_label">第二分页</string>
    <string name="next">下一步</string>
    <string name="previous">前一步</string>
    <string name="toolbarButtonText">测试工具栏</string>
    <string name="pick_color">选个颜色</string>
    <string name="go_back">你想要返回吗?</string>
    <string name="positive_button">是</string>
    <string name="negative_button">否</string>
    <string name="new_message">新消息</string>
    <string name="weatherForecast">天气预报</string>
    <string name="current_temp">当前温度: </string>
    <string name="min_temp">最低温度: </string>
    <string name="max_temp">最高温度: </string>
    <string name="messagehere">消息</string>
    <string name="delete_this_message">删除该消息</string>
</resources>