<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login"
    android:layout_width= "match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightBlue"
    tools:context=".LoginActivity"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18sp"
        android:layout_gravity="start">
    </TextView>
    <EditText android:id="@+id/edit_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_hint"
        android:inputType="textEmailAddress"
        >
    </EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="18sp"
        android:layout_gravity="start">
    </TextView>
    <EditText android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        >
    </EditText>
</LinearLayout>