<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/test_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/buttonText"
        android:text="@string/buttonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_view" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button2"
        app:layout_constraintVertical_bias="0.3"
        android:contentDescription="@string/buttonText2"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/test_toolbar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toolbarButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button3"
        android:contentDescription="@string/toolbarButtonText"
        app:layout_constraintVertical_bias="0.3"
        android:layout_marginTop="16dp"
        />
    <Button
        android:id="@+id/weather_forecast_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weatherForecast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_toolbar_button"
        android:contentDescription="@string/weatherForecast"
        app:layout_constraintVertical_bias="0.3"
        android:layout_marginTop="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>