<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".WeatherForecast">

    <ImageView
        android:id="@+id/current_weather_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="Current Weather Image"
        android:src="@drawable/clear_day" />

    <TextView
        android:id="@+id/current_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_temp"
        android:textSize="12sp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/min_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_temp"
        android:textSize="12sp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/max_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_temp"
        android:textSize="12sp"
        android:layout_marginTop="8dp"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal" />

</LinearLayout>